[package]
name = "rshackbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["net", "macros", "rt", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
