[package]
name = "rshackbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive", "env"] }
derive_more = "0.99.17"
futures-util = "0.3.30"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
shlex = "1.2.0"
tokio = { version = "1.35.1", features = ["net", "macros", "rt", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
